@@ -40,3 +40,15 @@ javafx {
 application {
     mainClass.set("edu.bsu.cs222.gui.GraphicalUserInterface")
 }
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test> {
+    jvmArgs = listOf("--enable-preview")
+}
+
+tasks.withType<JavaExec> {
+    jvmArgs = listOf("--enable-preview")
+}
